# QtGLShapes

./: .gitignore  .qmake.stash  2DShapesTransform.pro  2DShapesTransform.slnx  2DShapesTransform.vcxproj  2DShapesTransform.vcxproj.filters  CMakeLists.txt  CMakeUserPresets.json  README.md
docs/: 2D_to_3D_Transformations_Guide.md  Architecture_Documentation.md  Documentation.md  Shapes_Folder_Explanation.md
operations/: DataClass.cpp  DataClass.h  MeshExtruder.cpp  MeshExtruder.h  Rotation.cpp  Rotation.h  STLExporter.cpp  STLExporter.h  STLImporter.cpp  STLImporter.h  Scaling.cpp  Scaling.h  Transformations.cpp  Transformations.h  Translation.cpp  Translation.h  Triangle3D.h  Vertex3D.h
release/: 2DShapesTransform.exe.recipe  2DShapesTransform.vcxproj.FileListAbsolute.txt  moc_MainWindow.cpp  moc_glWindow.cpp  moc_predefs.h
release/2DShapes.9574AAAE.tlog/: 2DShapesTransform.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
shapes/: Circle.cpp  Circle.h  RectangleShape.cpp  RectangleShape.h  Shape.cpp  Shape.h  ShapeRenderer.cpp  ShapeRenderer.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
ui/: GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  glWindow.cpp  glWindow.h
